aws/projects/101-kittens-carousel-static-website-ec2/cf-template.yml
AWSTemplateFormatVersion: 2010-09-09
Description: |
  Cloudformation Template for Kittens Carousel Static Website on EC2. This template deploys 
  Kittens Carousel Static website on Amazon Linux 2 EC2 Instance with custom security group 
  allowing http connections on 80. Kittens Carousel Static Website is downloaded from GitHub 
  repository, then deployed on Apache Web Server.

  Project-101 - Kittens Carousel Static Website deployed on AWS EC2 using Cloudformation.
  
Resources:
  WebServerSecGrp:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: Enable HTTP for Apache Server and SSH for terminal.
      SecurityGroupIngress:
        - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: 0.0.0.0/0
      Tags:
        Key: Name
        Value: Cloud Formation Security Group
    WebServerHost:
      Type: "AWS::EC2::Instance"
      Properties:
        ImageId: ami-0c94855ba95c71c99
        InstanceType: t2.micro
        KeyName: aws_key
        SecurityGroupIds:
          - !Ref WebServerSecGrp
        Tags:
          Key: Name
          Value: !Sub Web Server of ${AWS::StackName} Stack
        UserData:
        Fn::Base64:
          !Sub |
          #! /bin/bash
          yum update -y
          yum install -y httpd
          DATE_TIME=`date`
          cd /var/www/html
          wget https://raw.githubusercontent.com/Gokay2705/Clarusway.AWS.Work.Shop/master/aws/projects/101-kittens-carousel-static-website-ec2/static-web/index.html
          wget https://raw.githubusercontent.com/Gokay2705/Clarusway.AWS.Work.Shop/master/aws/projects/101-kittens-carousel-static-website-ec2/static-web/cat0.jpg
          wget https://raw.githubusercontent.com/Gokay2705/Clarusway.AWS.Work.Shop/master/aws/projects/101-kittens-carousel-static-website-ec2/static-web/cat1.jpg
          wget https://raw.githubusercontent.com/Gokay2705/Clarusway.AWS.Work.Shop/master/aws/projects/101-kittens-carousel-static-website-ec2/static-web/cat2.jpg
          systemctl start httpd
          systemctl enable httpd 



        Volumes:
          - Volume
    
    

  
Outputs:
